--- a/assets/style.css
+++ b/assets/style.css
@@ -20,3 +20,14 @@ h2 {
 p {
     color: tomato;
 }
+
+header {
+
+    background-color: brown;
+    text-align: center;
+}
+
+h2 {
+
+    color: yellowgreen
+}
