--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,22 @@
 body {
-    background-color: black;
-    color: yellowgreen
+    background-color: white;
+    color: black
 }
 
 .border-box {
-    border: 2rem ;
-    padding: 6rem;
+    border: 0.1rem ;
+    padding: 0.1rem;
 }
 
 
 p {
-    color: green;
+    color: black;
 }
 
 h2 {
-    color: brown;
+    color: black;
 }
 
 p {
-    color: tomato;
+    color: black;
 }
